changed play again css button fixed sizing issue with title made error description font more visible

--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@ h1 {
     font-size: 1.5em;
     text-align: center;
     padding: 70px 0 0 0;
-    /* color: #EF8354; */
-    font-weight: 300;
     letter-spacing: 1px;
 }
 
@@ -65,7 +63,7 @@ h1 {
     font-family: 'Raleway', Arial, Helvetica, sans-serif;
     color: white;
     text-shadow: 1px 1px 1px #000,
-        3px 3px 5px blue;
+        3px 3px 5px #bfc0c0;
     position: relative;
     height: 30vh;
 }
@@ -98,9 +96,9 @@ h1 {
     display: inline-flex;
     height: 40px;
     width: 150px;
-    border: 2px solid #BFC0C0;
+    border: 2px solid #FFFFFF;
     margin: 20px 20px 20px 20px;
-    color: #BFC0C0;
+    color: #FFFFFF;
     text-transform: uppercase;
     text-decoration: none;
     font-size: .8em;
@@ -111,7 +109,7 @@ h1 {
 }
 
 a {
-    color: #BFC0C0;
+    color: #FFFFFF;
     text-decoration: none;
     letter-spacing: 1px;
 }
@@ -135,7 +133,7 @@ a {
     height: 250%;
     left: -200px;
     top: -30px;
-    background: #BFC0C0;
+    background: #FFFFFF;
     position: absolute;
     transition: all .3s ease-Out;
 }
@@ -194,7 +192,7 @@ a {
 }
 
 .transparent-box {
-    background-color: rgba(238, 232, 170, 0.8);
+    background-color: rgba(81, 127, 162, 0.8);
     height: 100%;
     position: absolute;
     width: 100%;
@@ -751,7 +749,7 @@ a {
     }
 
     .transparent-box {
-        background-color: rgba(238, 232, 170, 0.9);
+        background-color: rgba(81, 127, 162, 0.8);
     }
 
     .modal-content {
@@ -775,7 +773,7 @@ a {
     }
 
     .game-title h1 {
-        font-size: 2.9rem;
+        font-size: 3.9rem;
     }
 
     .game-title h3 {
@@ -907,7 +905,7 @@ a {
 
     .error-description {
         display: block;
-        font-size: 0.6rem;
+        font-size: 1rem;
         text-align: center;
         color: white;
         margin-top: 0;
